deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-app
  namespace: aks-app
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld
