deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-helloworld
  namespace: aks-app
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: aks.oikawa.dev.br
    http:
      paths:
      - path: /
        pathType: Prefix
      - backend:
          service:
            name: aks-helloworld
            port:
              number: 80
