deployments/ingress01.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-helloworld-ingress
  namespace: aks-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: "aks.oikawa.dev.br"
    http:
      paths:
      - backend:
          service:
            name: aks-helloworld
            port:
              number: 80
        path: "/app01"
        pathType: Prefix
      - backend:
          service:
            name: aks-helloworld
            port:
              number: 80
        path: /
        pathType: Prefix
